--- a/Install/RedGate.AppHost.wxs
+++ b/Install/RedGate.AppHost.wxs
@@ -3,7 +3,7 @@
 	<!-- Building block fragments because apparently everything has to be contained in a fragment -->
 	<Fragment Id="AppHostCore">
 		<DirectoryRef Id="INSTALLDIR">
-			<Component Id="RedGate.AppHost" Guid="{0A6DBAE8-0CFD-41D9-B27A-6AD72181CB7D}">
+			<Component Id="AppHostCore" Guid="{0A6DBAE8-0CFD-41D9-B27A-6AD72181CB7D}">
 				<File Id="Client" Name="AHClient.exe" LongName="RedGate.AppHost.Client.exe" DiskId="1" src="RedGate.AppHost.Client.exe" /> 
 				<File Id="Server" Name="AHServer.dll" LongName="RedGate.AppHost.Server.dll" DiskId="1" src="RedGate.AppHost.Server.dll" /> 
 				<File Id="Interfaces" Name="AHIfaces.dll" LongName="RedGate.AppHost.Interfaces.dll" DiskId="1" src="RedGate.AppHost.Interfaces.dll" /> 
@@ -15,7 +15,7 @@
 	</Fragment>
 
 	<!-- Reference one of the following fragments -->
-	<Fragment Id="AppHost">
+	<Fragment Id="RedGateAppHost">
 		<FeatureRef Id="Product">
 			<ComponentRef Id="AppHostCore"/>
 		</FeatureRef>
