Update installer to include new app.config file.
Does not include the 64-bit client - this isn't currently in the
installer...

--- a/Install/RedGate.AppHost.wxs
+++ b/Install/RedGate.AppHost.wxs
@@ -5,6 +5,7 @@
 		<DirectoryRef Id="INSTALLDIR">
 			<Component Id="AppHostCore" Guid="{0A6DBAE8-0CFD-41D9-B27A-6AD72181CB7D}">
 				<File Id="Client" Name="AHClient.exe" LongName="RedGate.AppHost.Client.exe" DiskId="1" src="RedGate.AppHost.Client.exe" /> 
+				<File Id="ClientConfig" Name="AHClient.cfg" LongName="RedGate.AppHost.Client.exe.config" DiskId="1" src="RedGate.AppHost.Client.exe.config" />
 				<File Id="Server" Name="AHServer.dll" LongName="RedGate.AppHost.Server.dll" DiskId="1" src="RedGate.AppHost.Server.dll" /> 
 				<File Id="Interfaces" Name="AHIfaces.dll" LongName="RedGate.AppHost.Interfaces.dll" DiskId="1" src="RedGate.AppHost.Interfaces.dll" /> 
 				<File Id="Remoting" Name="AHRemote.dll" LongName="RedGate.AppHost.Remoting.dll" DiskId="1" src="RedGate.AppHost.Remoting.dll" /> 
